# NTU_2023Fall_TextMining

./: README.md  pyproject.toml
final/: tmp.ipynb  train.ipynb
final/uncased_L-8_H-512_A-8/: bert_model.ckpt.index
hw1/: hw1 copy.ipynb  report.pages
hw1/output/: 1.vec  10.vec  100.vec  1000.vec  1001.vec  1002.vec  1003.vec  1004.vec  1005.vec  1006.vec  1007.vec  1008.vec  1009.vec  101.vec  1010.vec  1011.vec  1012.vec  1013.vec  1014.vec  1015.vec  1016.vec  1017.vec  1018.vec  1019.vec  102.vec  1020.vec  1021.vec  1022.vec  1023.vec  1024.vec  1025.vec  1026.vec  1027.vec  1028.vec  1029.vec  103.vec  1030.vec  1031.vec  1032.vec  1033.vec  (+1036 more)
hw2/: PA-2_new-1.pptx  hw2.ipynb  report.pages
hw3/: 2.csv  PA-3_ITM-1-1.pptx  pa3 copy.ipynb  pa3.ipynb  pa3.py  prediction2.csv  report.pages
