[tool.poetry]
name = "text processing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
tensorflow-macos = "^2.15.0"
keras-bert = "^0.89.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"
seaborn = "^0.13.0"
optuna = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
